--- a/pages/order/writeOrder.wxss
+++ b/pages/order/writeOrder.wxss
@@ -3,9 +3,14 @@
 .order_bg {
     font-size: 15px;
     background-color: #f5f5f5;
-    height: 100%;
+    overflow-y: scroll;
 }
-
+.order_bg>view{
+    overflow: hidden;
+}
+.order_bg::-webkit-scrollbar{
+    display: none;
+}
 .mar_tb {
     margin-top: 23rpx;
     margin-bottom: 23rpx;
