--- a/pages/order/writeOrder.wxss
+++ b/pages/order/writeOrder.wxss
@@ -92,7 +92,15 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
     width: 37% !important;
     font-size: 20rpx;
 }
-
+.title_sty2 {
+    width: 39% !important;
+    font-size: 20rpx;
+}
+.title_sty2>image {
+    width:30rpx;
+    height:30rpx;
+    margin-left:16rpx;
+}
 .dh_sty {
     color: #222;
     font-size: 26rpx;
