--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,17 +8,10 @@
             <image src="../../images/insurance/index_banner_2.png" style='width:100%;height:408rpx;' bindtap='to_detail_foreign' />
         </view>
     </view>
-    <view class='mar_sx'>
-       <view class="weui-cells weui-cells_after-title">
-            <view class="weui-cell">
-                <view class="weui-cell__bd">常见问题</view>
-                <view class="weui-cell__ft">></view>
-            </view>
-        </view>
-    </view>
     <view class='company'>
+        <view>海豚保险经纪（深圳）有限公司</view>
         <view>北京伟林易航科技有限公司</view>
-        <view>海豚保险</view>
+        <view> 京ICP备16046569号-2</view>
     </view>
     
 </view>
