--- a/pages/order/writeOrder.wxss
+++ b/pages/order/writeOrder.wxss
@@ -19,6 +19,7 @@
 .xy_sty {
     letter-spacing: 2px;
     color: #2e66c3;
+    font-size:24rpx;
 }
 
 checkbox {
@@ -42,7 +43,10 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
 
 .bg_none {
     background-color: #f5f5f5 !important;
-    
+}
+.row_flex{
+    display: flex;
+    flex-direction: row;
 }
 .time_data{
     margin-top: 25rpx;
@@ -247,5 +251,4 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
     margin-top: 32rpx;
     margin-bottom: 85rpx;
     color: #222222;
-  
 }
