--- a/pages/detail/showDetail.wxss
+++ b/pages/detail/showDetail.wxss
@@ -71,6 +71,8 @@
     color: rgba(18, 194, 97, 0.774);
     width:57%;
     border-right: 1px solid #ddd; 
+    display: flex;
+    flex-direction: row;
 }
 
 .page_hd_ch {
@@ -90,4 +92,26 @@
 .mar_sx{
     margin-top: 23rpx;
     margin-bottom:120rpx;
+}
+.te_hui{
+    background-color: #ff4737;
+    padding: 5rpx 10rpx;
+    border-radius:5px; 
+    color: #fff;
+    height: 40rpx;
+    margin-top: 16rpx;
+    margin-right: 5rpx;
+}
+.mar_left{
+    font-size: 28rpx;
+    margin-left: 216rpx;
+    color: #949494;
+    margin-top: 34rpx;
+    text-decoration: line-through;
+}
+.font_s{
+    font-size: 24rpx;
+}
+.mar_top{
+    padding-top: 30rpx;
 }
