--- a/pages/notice/notice.wxml
+++ b/pages/notice/notice.wxml
@@ -5,13 +5,13 @@
     <view class='text_size'>3、本保险仅承保通过航司购票后，将个人行李交给航空承运人托运后产生的行李丢失或损失。</view>
     <view class='text_size1'>4、下列物品不在本保险标的范围内：危险物品、货币、有价证券、票证、邮票、纪念币、金银制品、首饰、珠宝、钻石、玉器、古书、古玩、字画、艺术品、文件、帐册、技术资料、图表、动物、植物等其他不易或无法鉴定价值的物品。</view>
     <view class='text_size'>5、下列原因造成保险行李的损失，保险人不负赔偿责任：</view>
-    <view class='text_size'>（一）行李内物品的自然损耗、本身的缺陷和自然特性；</view>
-    <view class='text_size'>（二）在保险责任开始前，行李内物品已存在的品质不良或数量短差；</view>
-    <view class='text_size'>（三）因包装不善导致的行李散失或损毁；</view>
-    <view class='text_size'>（四）被保险人的故意行为或违法犯罪行为；</view>   
-    <view class='text_size'>（五）战争、军事行动、扣押、罢工、哄抢和暴动；</view>
-    <view class='text_size'>（六）核反应、核子幅射和放射性污染；</view>
-    <view class='text_size'>（七）行政行为或司法行为；</view>    
+    <view class='text_size1'>（一）行李内物品的自然损耗、本身的缺陷和自然特性；</view>
+    <view class='text_size1'>（二）在保险责任开始前，行李内物品已存在的品质不良或数量短差；</view>
+    <view class='text_size1'>（三）因包装不善导致的行李散失或损毁；</view>
+    <view class='text_size1'>（四）被保险人的故意行为或违法犯罪行为；</view>   
+    <view class='text_size1'>（五）战争、军事行动、扣押、罢工、哄抢和暴动；</view>
+    <view class='text_size1'>（六）核反应、核子幅射和放射性污染；</view>
+    <view class='text_size1'>（七）行政行为或司法行为；</view>    
     <view class='text_size'>6、保险责任自行李办理托运时间开始，至行李到达目的地离开机场后自动失效。</view>
     <view class='text_size'>7、投保份数：本产品可以投保多份，同一件托运行李最高可以投保5份，超过部分无效；</view>
     <view class='text_size'>8、保险公司：本保险产品由中国太平洋财产保险股份有限公司宁波分公司承保；</view>
