--- a/pages/order/writeOrder.wxml
+++ b/pages/order/writeOrder.wxml
@@ -63,7 +63,7 @@
             </view>
         </view>
         <view class="weui-cell">
-            <view class="peo_xx_left">终点站</view>
+            <view class="peo_xx_left">目的站</view>
             <view class="weui-cell__ft peo_xx_right">
                 <input placeholder="请输入终点站" class='_input' value='{{arrCity}}' bindblur='getPrice' name="arrCity" bindinput='endInput'  bindblur='hb_zd_Blur'/>
             </view>
