--- a/pages/order/writeOrder.wxss
+++ b/pages/order/writeOrder.wxss
@@ -88,7 +88,7 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
 }
 
 .title_sty {
-    
+    width: 38%;
     font-size: 20rpx;
 }
 
