--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,7 +2,7 @@
 <view class='bg' style='{{pageStyle}}'>
     <view class='bg_index'>
         <view class='mar_auto'>
-            <image src="../../images/insurance/index_banner_1.png" style='width:100%;margin-top:7px;height:408rpx;' bindtap='to_detail_inner' />
+            <image src="../../images/insurance/index_banner_1.png" style='width:101.5%;margin-top:7px;height:408rpx;margin-left:-5rpx;' bindtap='to_detail_inner' />
         </view>
         <view class='mar_auto'>
             <image src="../../images/insurance/index_banner_2.png" style='width:100%;height:408rpx;' bindtap='to_detail_foreign' />
