--- a/pages/order/writeOrder.wxml
+++ b/pages/order/writeOrder.wxml
@@ -12,16 +12,16 @@
                 <input placeholder="请输入您的姓名" class='_input' name="userName" value='{{user_name}}' data-cc='{{user_name}}' bindblur='peo_name_Blur'/>
             </view>
         </view>
-        <!-- <view class="weui-cell">
+        <view class="weui-cell">
             <view class="peo_xx_left">证件类型</view>
             <view class="weui-cell__ft peo_xx_right">
-                <input placeholder="请选择证件类型>" class='_input' name="userName" bindtap="open" /> 
+                <input placeholder="请选择证件类型>" class='_input' name="userName" bindtap="open"  value="{{zj_typeN}}"/> 
             </view>
-        </view> -->
+        </view> 
         <view class="weui-cell">
-            <view class="peo_xx_left">身份证号</view>
+            <view class="peo_xx_left">证件号</view>
             <view class="weui-cell__ft peo_xx_right">
-                <input placeholder="请输入身份证号" class='_input' name="userId" maxlength='18' value='{{user_num}}' bindblur='peo_num_Blur'/>
+                <input placeholder="请输入证件号" class='_input' name="userId" maxlength='18' value='{{user_num}}' bindblur='peo_num_Blur'/>
             </view>
         </view>
          <view class="weui-cell">
